<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/styleTabGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/space_sm"
        app:chipSpacingHorizontal="8dp"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/tabColor"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style_tab_color"
            android:textColor="@color/chip_style_tab_text"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_style_tab_bg"
            app:chipCornerRadius="@dimen/radius_chip"
            app:chipMinHeight="@dimen/chip_min_height"
            app:chipStrokeColor="@color/primary"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tabShape"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style_tab_shape"
            android:textColor="@color/chip_style_tab_text"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_style_tab_bg"
            app:chipCornerRadius="@dimen/radius_chip"
            app:chipMinHeight="@dimen/chip_min_height"
            app:chipStrokeColor="@color/primary"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tabLogo"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style_tab_logo"
            android:textColor="@color/chip_style_tab_text"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_style_tab_bg"
            app:chipCornerRadius="@dimen/radius_chip"
            app:chipMinHeight="@dimen/chip_min_height"
            app:chipStrokeColor="@color/primary"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tabSticker"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style_tab_sticker"
            android:textColor="@color/chip_style_tab_text"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_style_tab_bg"
            app:chipCornerRadius="@dimen/radius_chip"
            app:chipMinHeight="@dimen/chip_min_height"
            app:chipStrokeColor="@color/primary"
            app:chipStrokeWidth="1dp" />

    </com.google.android.material.chip.ChipGroup>

    <FrameLayout
        android:id="@+id/tabContentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md" />

</LinearLayout>
